--- a/package.json
+++ b/package.json
@@ -9,23 +9,24 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "eslint": "8.42.0",
-    "eslint-config-next": "13.4.5",
     "@reduxjs/toolkit": "^1.9.5",
     "@sentry/nextjs": "^7.51.2",
     "@types/node": "20.3.1",
     "@types/react": "18.2.12",
     "@types/react-dom": "18.2.5",
-    "next": "13.4.5",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
     "axios": "^1.3.5",
     "bootstrap": "^5.2.3",
+    "eslint": "8.42.0",
+    "eslint-config-next": "13.4.5",
+    "next": "13.4.5",
+    "next-auth": "^4.22.1",
+    "react": "18.2.0",
     "react-bootstrap": "^2.7.4",
+    "react-dom": "18.2.0",
     "react-icons": "^4.8.0",
     "react-redux": "^8.0.5",
-    "typescript": "^5.0.4",
-    "sass": "^1.62.0"
+    "sass": "^1.62.0",
+    "typescript": "^5.0.4"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^5.16.5",
